# Test_Yandex

./: .gitignore  README.md  conftest.py  logs.py  pyproject.toml  pytest_report.html  tests.py
src/: locators.py  logs.py  pages.py
tests/: test_images.py  test_search.py
