[tool.poetry]
name = "test-yandex"
version = "0.1.0"
description = ""
authors = ["satel31 <blokhnina.tatiana@yandex.ru>"]
readme = "README.md"
packages = [{include = "test_yandex"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.12.0"
pytest = "^7.4.1"
logging = "^0.4.9.6"
pytest-html = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
